Remove duplicate initializeState and setParameters that was wrongly resulting in correct results.  Ensure that when evaluating expressions that we pop the current library off the deque but not too soon, so the reverse order evaluation actually works.  Add more TODOs.